--- a/M04_flujosdecontrol/Prep_Course_Homework_04-Resuelto.ipynb
+++ b/M04_flujosdecontrol/Prep_Course_Homework_04-Resuelto.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -71,9 +71,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Las variables 3.2 y 2 son del mismo tipo de dato\n"
+     ]
+    }
+   ],
    "source": [
     "# El formato utilizado a continuación en el print es conocido como f-string o formatted string literals en Python. Las f-strings permiten incrustar expresiones dentro de una cadena de texto mediante llaves {} y el prefijo \"f\" antes de la cadena. Dentro de las llaves, puedes colocar variables, expresiones o incluso invocar funciones para su evaluación e inclusión en la cadena resultante.\n",
     "a = 3.2\n",
@@ -91,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -133,9 +141,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El numero 1 es impar\n",
+      "El numero 2 es par\n",
+      "El numero 3 es impar\n",
+      "El numero 4 es par\n",
+      "El numero 5 es impar\n",
+      "El numero 6 es par\n",
+      "El numero 7 es impar\n",
+      "El numero 8 es par\n",
+      "El numero 9 es impar\n",
+      "El numero 10 es par\n",
+      "El numero 11 es impar\n",
+      "El numero 12 es par\n",
+      "El numero 13 es impar\n",
+      "El numero 14 es par\n",
+      "El numero 15 es impar\n",
+      "El numero 16 es par\n",
+      "El numero 17 es impar\n",
+      "El numero 18 es par\n",
+      "El numero 19 es impar\n",
+      "El numero 20 es par\n"
+     ]
+    }
+   ],
    "source": [
     "# resuelto con while\n",
     "\n",
@@ -158,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -277,18 +312,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ciclo while nro 1\n",
-      "Ciclo for nro 1\n",
-      "Ciclo while nro 2\n",
-      "Ciclo for nro 1\n",
-      "Ciclo for nro 2\n",
       "Ciclo while nro 3\n",
       "Ciclo for nro 1\n",
       "Ciclo for nro 2\n",
@@ -302,7 +332,7 @@
     }
    ],
    "source": [
-    "n = 1\n",
+    "n = 3\n",
     "while n < 5:\n",
     "    print('Ciclo while nro ' + str(n))  # Imprime el número del ciclo while\n",
     "    for i in range(1, n+1): # como la función range(a, b) genera una secuencia de números desde a hasta b-1. Para que el bucle for incluya el número n, usamos range(1, n+1) en lugar de range(1, n).\n",
@@ -320,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -342,25 +372,16 @@
      "output_type": "stream",
      "text": [
       "Ciclo for nro 1\n",
-      "Ciclo while nro 5\n",
       "Ciclo while nro 4\n",
       "Ciclo while nro 3\n",
       "Ciclo while nro 2\n",
       "Ciclo while nro 1\n",
       "Ciclo for nro 2\n",
-      "Ciclo while nro 5\n",
       "Ciclo while nro 4\n",
       "Ciclo while nro 3\n",
       "Ciclo while nro 2\n",
       "Ciclo while nro 1\n",
       "Ciclo for nro 3\n",
-      "Ciclo while nro 5\n",
-      "Ciclo while nro 4\n",
-      "Ciclo while nro 3\n",
-      "Ciclo while nro 2\n",
-      "Ciclo while nro 1\n",
-      "Ciclo for nro 4\n",
-      "Ciclo while nro 5\n",
       "Ciclo while nro 4\n",
       "Ciclo while nro 3\n",
       "Ciclo while nro 2\n",
@@ -369,7 +390,7 @@
     }
    ],
    "source": [
-    "n = 5\n",
+    "n = 4\n",
     "for i in range(1, n):\n",
     "    print('Ciclo for nro ' + str(i))  # Imprime el número del ciclo for\n",
     "    \n",
@@ -380,8 +401,7 @@
     "        n_temp -= 1\n",
     "        \n",
     "        if n_temp <= 0:\n",
-    "            break  # Sale del ciclo while cuando n_temp sea menor o igual a 0\n",
-    "    \n"
+    "            break# Sale del ciclo while cuando n_temp sea menor o igual a 0\n"
    ]
   },
   {
@@ -394,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -763,18 +783,6 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "¿Desea encontrar el siguiente número primo?\n",
-      "2\n",
-      "¿Desea encontrar el siguiente número primo?\n",
-      "3\n",
-      "¿Desea encontrar el siguiente número primo?\n",
-      "5\n",
-      "¿Desea encontrar el siguiente número primo?\n",
-      "7\n",
-      "¿Desea encontrar el siguiente número primo?\n",
-      "11\n",
-      "¿Desea encontrar el siguiente número primo?\n",
-      "13\n",
       "¿Desea encontrar el siguiente número primo?\n",
       "Se finaliza el proceso\n"
      ]
@@ -810,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
