--- a/M05_estructuradedatos/Prep_Course_Homework_05.ipynb
+++ b/M05_estructuradedatos/Prep_Course_Homework_05.ipynb
@@ -18,10 +18,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bogota', 'buenos aires', 'new york', 'dubai', 'taiwan', 'rio de janeiro']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ciudades=['bogota','buenos aires','new york','dubai','taiwan','rio de janeiro']\n",
+    "print(ciudades)"
+   ]
   },
   {
    "attachments": {},
@@ -33,10 +44,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "buenos aires\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ciudades[1])"
+   ]
   },
   {
    "attachments": {},
@@ -48,10 +69,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['buenos aires', 'new york', 'dubai']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ciudades[1:4]"
+   ]
   },
   {
    "attachments": {},
@@ -63,10 +97,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(ciudades)"
+   ]
   },
   {
    "attachments": {},
@@ -78,10 +125,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['new york', 'dubai', 'taiwan', 'rio de janeiro']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ciudades[2:]"
+   ]
   },
   {
    "attachments": {},
@@ -93,10 +153,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['bogota', 'buenos aires', 'new york', 'dubai']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ciudades[:4]"
+   ]
   },
   {
    "attachments": {},
@@ -108,10 +181,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ciudades.append('miami')\n",
+    "ciudades.insert(3,'lima')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bogota', 'buenos aires', 'new york', 'dubai', 'taiwan', 'rio de janeiro', 'miami', 'servia']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ciudades.append('servia')\n",
+    "print(ciudades)"
+   ]
   },
   {
    "attachments": {},
@@ -123,10 +217,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bogota', 'buenos aires', 'new york', 'lima', 'dubai', 'taiwan', 'rio de janeiro', 'miami', 'servia']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ciudades.insert(3,'lima')\n",
+    "print(ciudades)"
+   ]
   },
   {
    "attachments": {},
@@ -138,10 +243,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bogota', 'buenos aires', 'new york', 'lima', 'dubai', 'taiwan', 'rio de janeiro', 'miami', 'servia', 'roma', 'inglaterra', 'el salvador']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ciudades.extend(['roma','inglaterra','el salvador'],)\n",
+    "print(ciudades)\n"
+   ]
   },
   {
    "attachments": {},
@@ -153,10 +269,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ciudades.index('lima')\n",
+    "#la particularidad es que muestra el indice de la primera que aparezca en a lista"
+   ]
   },
   {
    "attachments": {},
@@ -168,10 +298,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "'rusia' is not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[93], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m ciudades\u001b[39m.\u001b[39;49mindex(\u001b[39m'\u001b[39;49m\u001b[39mrusia\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "\u001b[1;31mValueError\u001b[0m: 'rusia' is not in list"
+     ]
+    }
+   ],
+   "source": [
+    "ciudades.index('rusia')\n",
+    "#nos va a lanzar erro de que no existe en la lista"
+   ]
   },
   {
    "attachments": {},
@@ -183,10 +328,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ciudades.remove('miami')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bogota', 'buenos aires', 'new york', 'lima', 'lima', 'dubai', 'taiwan', 'rio de janeiro', 'servia', 'roma', 'inglaterra', 'el salvador']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ciudades)"
+   ]
   },
   {
    "attachments": {},
@@ -198,10 +362,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "list.remove(x): x not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[96], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m ciudades\u001b[39m.\u001b[39;49mremove(\u001b[39m'\u001b[39;49m\u001b[39mcaracas\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "\u001b[1;31mValueError\u001b[0m: list.remove(x): x not in list"
+     ]
+    }
+   ],
+   "source": [
+    "ciudades.remove('caracas')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#nos tira error porque no existe en la lista"
+   ]
   },
   {
    "attachments": {},
@@ -213,10 +400,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "el salvador\n"
+     ]
+    }
+   ],
+   "source": [
+    "ciudad=ciudades.pop()\n",
+    "print(ciudad)"
+   ]
   },
   {
    "attachments": {},
@@ -228,10 +426,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['bogota',\n",
+       " 'buenos aires',\n",
+       " 'new york',\n",
+       " 'lima',\n",
+       " 'lima',\n",
+       " 'dubai',\n",
+       " 'taiwan',\n",
+       " 'rio de janeiro',\n",
+       " 'servia',\n",
+       " 'roma',\n",
+       " 'inglaterra',\n",
+       " 'bogota',\n",
+       " 'buenos aires',\n",
+       " 'new york',\n",
+       " 'lima',\n",
+       " 'lima',\n",
+       " 'dubai',\n",
+       " 'taiwan',\n",
+       " 'rio de janeiro',\n",
+       " 'servia',\n",
+       " 'roma',\n",
+       " 'inglaterra',\n",
+       " 'bogota',\n",
+       " 'buenos aires',\n",
+       " 'new york',\n",
+       " 'lima',\n",
+       " 'lima',\n",
+       " 'dubai',\n",
+       " 'taiwan',\n",
+       " 'rio de janeiro',\n",
+       " 'servia',\n",
+       " 'roma',\n",
+       " 'inglaterra',\n",
+       " 'bogota',\n",
+       " 'buenos aires',\n",
+       " 'new york',\n",
+       " 'lima',\n",
+       " 'lima',\n",
+       " 'dubai',\n",
+       " 'taiwan',\n",
+       " 'rio de janeiro',\n",
+       " 'servia',\n",
+       " 'roma',\n",
+       " 'inglaterra']"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ciudades*4"
+   ]
   },
   {
    "attachments": {},
@@ -243,10 +497,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=(1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20)\n",
+    "print(a)\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "attachments": {},
@@ -258,10 +525,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(12, 13, 14, 15, 16)"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[10:15]"
+   ]
   },
   {
    "attachments": {},
@@ -273,10 +553,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(20 in a)\n",
+    "30 in a"
+   ]
   },
   {
    "attachments": {},
@@ -288,10 +589,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "se agrego el elemento  paris\n"
+     ]
+    }
+   ],
+   "source": [
+    "city='paris'\n",
+    "if(not('paris' in ciudades)):\n",
+    "    ciudades.append('paris')\n",
+    "    print('se agrego el elemento ',str(city))\n",
+    "else:\n",
+    "    print('el elemeto ',str(city),' ya existia')"
+   ]
   },
   {
    "attachments": {},
@@ -303,10 +619,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a.count('13'))\n",
+    "print(ciudades.count('lima'))"
+   ]
   },
   {
    "attachments": {},
@@ -318,10 +646,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b=list(a)\n",
+    "print(b)"
+   ]
   },
   {
    "attachments": {},
@@ -333,10 +672,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a1,a2,a3,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,=a\n",
+    "print(a1,a2,a3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bogota', 'buenos aires', 'new york', 'lima', 'lima', 'dubai', 'taiwan', 'rio de janeiro', 'servia', 'roma', 'inglaterra', 'paris']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ciudades)"
+   ]
   },
   {
    "attachments": {},
@@ -348,10 +715,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ciudades': ['bogota', 'buenos aires', 'new york', 'lima', 'lima', 'dubai', 'taiwan', 'rio de janeiro', 'servia', 'roma', 'inglaterra', 'paris'], 'pais': ['colombia', 'argentina', 'USA', 'peru', '', 'taiwan', 'brazil', 'rusia', 'italia', 'inglaterra', 'francia'], 'continente': ['america', 'america', 'america', 'america', 'america', '', 'asia', 'america', 'asia', 'europa', 'europa', 'europa']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=dict\n",
+    "a={'ciudades':ciudades,\n",
+    "   'pais':['colombia','argentina','USA','peru','','taiwan','brazil','rusia','italia','inglaterra','francia'],\n",
+    "   'continente':['america','america','america','america','america','','asia','america','asia','europa','europa','europa']}\n",
+    "print(a)"
+   ]
   },
   {
    "attachments": {},
@@ -363,10 +744,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['ciudades', 'pais', 'continente'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a.keys())"
+   ]
   },
   {
    "attachments": {},
@@ -378,10 +769,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bogota', 'buenos aires', 'new york', 'lima', 'lima', 'dubai', 'taiwan', 'rio de janeiro', 'servia', 'roma', 'inglaterra', 'paris']\n",
+      "['colombia', 'argentina', 'USA', 'peru', '', 'taiwan', 'brazil', 'rusia', 'italia', 'inglaterra', 'francia']\n",
+      "['america', 'america', 'america', 'america', 'america', '', 'asia', 'america', 'asia', 'europa', 'europa', 'europa']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a['ciudades'])\n",
+    "print(a['pais'])\n",
+    "print(a['continente'])"
+   ]
   }
  ],
  "metadata": {
@@ -403,7 +808,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
