--- a/M04_flujosdecontrol/Prep_Course_Homework_04.ipynb
+++ b/M04_flujosdecontrol/Prep_Course_Homework_04.ipynb
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,12 @@
       "19\n",
       "23\n",
       "29\n",
-      "ciclos en total: 378\n"
+      "31\n",
+      "37\n",
+      "41\n",
+      "43\n",
+      "47\n",
+      "ciclos en total: 1128\n"
      ]
     }
    ],
@@ -580,215 +585,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100 es divisible por doce\n",
-      "101 es divisible por doce\n",
-      "\n",
-      "103 es divisible por doce\n",
-      "104 es divisible por doce\n",
-      "105 es divisible por doce\n",
-      "106 es divisible por doce\n",
-      "107 es divisible por doce\n",
-      "\n",
-      "109 es divisible por doce\n",
-      "110 es divisible por doce\n",
-      "111 es divisible por doce\n",
-      "112 es divisible por doce\n",
-      "113 es divisible por doce\n",
-      "\n",
-      "115 es divisible por doce\n",
-      "116 es divisible por doce\n",
-      "117 es divisible por doce\n",
-      "118 es divisible por doce\n",
-      "119 es divisible por doce\n",
-      "\n",
-      "121 es divisible por doce\n",
-      "122 es divisible por doce\n",
-      "123 es divisible por doce\n",
-      "124 es divisible por doce\n",
-      "125 es divisible por doce\n",
-      "\n",
-      "127 es divisible por doce\n",
-      "128 es divisible por doce\n",
-      "129 es divisible por doce\n",
-      "130 es divisible por doce\n",
-      "131 es divisible por doce\n",
-      "\n",
-      "133 es divisible por doce\n",
-      "134 es divisible por doce\n",
-      "135 es divisible por doce\n",
-      "136 es divisible por doce\n",
-      "137 es divisible por doce\n",
-      "\n",
-      "139 es divisible por doce\n",
-      "140 es divisible por doce\n",
-      "141 es divisible por doce\n",
-      "142 es divisible por doce\n",
-      "143 es divisible por doce\n",
-      "\n",
-      "145 es divisible por doce\n",
-      "146 es divisible por doce\n",
-      "147 es divisible por doce\n",
-      "148 es divisible por doce\n",
-      "149 es divisible por doce\n",
-      "\n",
-      "151 es divisible por doce\n",
-      "152 es divisible por doce\n",
-      "153 es divisible por doce\n",
-      "154 es divisible por doce\n",
-      "155 es divisible por doce\n",
-      "\n",
-      "157 es divisible por doce\n",
-      "158 es divisible por doce\n",
-      "159 es divisible por doce\n",
-      "160 es divisible por doce\n",
-      "161 es divisible por doce\n",
-      "\n",
-      "163 es divisible por doce\n",
-      "164 es divisible por doce\n",
-      "165 es divisible por doce\n",
-      "166 es divisible por doce\n",
-      "167 es divisible por doce\n",
-      "\n",
-      "169 es divisible por doce\n",
-      "170 es divisible por doce\n",
-      "171 es divisible por doce\n",
-      "172 es divisible por doce\n",
-      "173 es divisible por doce\n",
-      "\n",
-      "175 es divisible por doce\n",
-      "176 es divisible por doce\n",
-      "177 es divisible por doce\n",
-      "178 es divisible por doce\n",
-      "179 es divisible por doce\n",
-      "\n",
-      "181 es divisible por doce\n",
-      "182 es divisible por doce\n",
-      "183 es divisible por doce\n",
-      "184 es divisible por doce\n",
-      "185 es divisible por doce\n",
-      "\n",
-      "187 es divisible por doce\n",
-      "188 es divisible por doce\n",
-      "189 es divisible por doce\n",
-      "190 es divisible por doce\n",
-      "191 es divisible por doce\n",
-      "\n",
-      "193 es divisible por doce\n",
-      "194 es divisible por doce\n",
-      "195 es divisible por doce\n",
-      "196 es divisible por doce\n",
-      "197 es divisible por doce\n",
-      "\n",
-      "199 es divisible por doce\n",
-      "200 es divisible por doce\n",
-      "201 es divisible por doce\n",
-      "202 es divisible por doce\n",
-      "203 es divisible por doce\n",
-      "\n",
-      "205 es divisible por doce\n",
-      "206 es divisible por doce\n",
-      "207 es divisible por doce\n",
-      "208 es divisible por doce\n",
-      "209 es divisible por doce\n",
-      "\n",
-      "211 es divisible por doce\n",
-      "212 es divisible por doce\n",
-      "213 es divisible por doce\n",
-      "214 es divisible por doce\n",
-      "215 es divisible por doce\n",
-      "\n",
-      "217 es divisible por doce\n",
-      "218 es divisible por doce\n",
-      "219 es divisible por doce\n",
-      "220 es divisible por doce\n",
-      "221 es divisible por doce\n",
-      "\n",
-      "223 es divisible por doce\n",
-      "224 es divisible por doce\n",
-      "225 es divisible por doce\n",
-      "226 es divisible por doce\n",
-      "227 es divisible por doce\n",
-      "\n",
-      "229 es divisible por doce\n",
-      "230 es divisible por doce\n",
-      "231 es divisible por doce\n",
-      "232 es divisible por doce\n",
-      "233 es divisible por doce\n",
-      "\n",
-      "235 es divisible por doce\n",
-      "236 es divisible por doce\n",
-      "237 es divisible por doce\n",
-      "238 es divisible por doce\n",
-      "239 es divisible por doce\n",
-      "\n",
-      "241 es divisible por doce\n",
-      "242 es divisible por doce\n",
-      "243 es divisible por doce\n",
-      "244 es divisible por doce\n",
-      "245 es divisible por doce\n",
-      "\n",
-      "247 es divisible por doce\n",
-      "248 es divisible por doce\n",
-      "249 es divisible por doce\n",
-      "250 es divisible por doce\n",
-      "251 es divisible por doce\n",
-      "\n",
-      "253 es divisible por doce\n",
-      "254 es divisible por doce\n",
-      "255 es divisible por doce\n",
-      "256 es divisible por doce\n",
-      "257 es divisible por doce\n",
-      "\n",
-      "259 es divisible por doce\n",
-      "260 es divisible por doce\n",
-      "261 es divisible por doce\n",
-      "262 es divisible por doce\n",
-      "263 es divisible por doce\n",
-      "\n",
-      "265 es divisible por doce\n",
-      "266 es divisible por doce\n",
-      "267 es divisible por doce\n",
-      "268 es divisible por doce\n",
-      "269 es divisible por doce\n",
-      "\n",
-      "271 es divisible por doce\n",
-      "272 es divisible por doce\n",
-      "273 es divisible por doce\n",
-      "274 es divisible por doce\n",
-      "275 es divisible por doce\n",
-      "\n",
-      "277 es divisible por doce\n",
-      "278 es divisible por doce\n",
-      "279 es divisible por doce\n",
-      "280 es divisible por doce\n",
-      "281 es divisible por doce\n",
-      "\n",
-      "283 es divisible por doce\n",
-      "284 es divisible por doce\n",
-      "285 es divisible por doce\n",
-      "286 es divisible por doce\n",
-      "287 es divisible por doce\n",
-      "\n",
-      "289 es divisible por doce\n",
-      "290 es divisible por doce\n",
-      "291 es divisible por doce\n",
-      "292 es divisible por doce\n",
-      "293 es divisible por doce\n",
-      "\n",
-      "295 es divisible por doce\n",
-      "296 es divisible por doce\n",
-      "297 es divisible por doce\n",
-      "298 es divisible por doce\n",
-      "299 es divisible por doce\n",
-      "\n",
-      "301 es divisible por doce\n"
+      "108 es divisible por doce\n",
+      "120 es divisible por doce\n",
+      "132 es divisible por doce\n",
+      "144 es divisible por doce\n",
+      "156 es divisible por doce\n",
+      "168 es divisible por doce\n",
+      "180 es divisible por doce\n",
+      "192 es divisible por doce\n",
+      "204 es divisible por doce\n",
+      "216 es divisible por doce\n",
+      "228 es divisible por doce\n",
+      "240 es divisible por doce\n",
+      "252 es divisible por doce\n",
+      "264 es divisible por doce\n",
+      "276 es divisible por doce\n",
+      "288 es divisible por doce\n",
+      "300 es divisible por doce\n"
      ]
     }
    ],
@@ -796,11 +616,9 @@
     "num=99\n",
     "while( num <= 300):\n",
     "    num +=1\n",
-    "    if (num % 6 !=0):\n",
+    "    if (num % 12 ==0):\n",
     "        print(num,'es divisible por doce')\n",
-    "        continue\n",
-    "    else:\n",
-    "        print('')"
+    "        continue"
    ]
   },
   {
