--- a/M06_iterablesiteradores/Prep_Course_Homework_06.ipynb
+++ b/M06_iterablesiteradores/Prep_Course_Homework_06.ipynb
@@ -18,10 +18,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-15, -14, -13, -12, -11, -10, -9, -8, -7, -6, -5, -4, -3, -2, -1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "h=[]\n",
+    "b=-15\n",
+    "while b<0:\n",
+    "    h.append(b)\n",
+    "    b+=1\n",
+    "print(h)"
+   ]
   },
   {
    "attachments": {},
@@ -33,10 +48,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-14\n",
+      "-12\n",
+      "-10\n",
+      "-8\n",
+      "-6\n",
+      "-4\n",
+      "-2\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "h=[-15,-14,-13,-12,-11,-10,-9,-8,-7,-6,-5,-4,-3,-2,-1]\n",
+    "par=0\n",
+    "while par < len(h):\n",
+    "    if h [par] %2 == 0:\n",
+    "        print(h[par])\n",
+    "    par+=1"
+   ]
   },
   {
    "attachments": {},
@@ -48,10 +85,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-14\n",
+      "-12\n",
+      "-10\n",
+      "-8\n",
+      "-6\n",
+      "-4\n",
+      "-2\n"
+     ]
+    }
+   ],
+   "source": [
+    "b=0\n",
+    "for b in h:\n",
+    "    if b % 2 == 0:\n",
+    "        print(b)"
+   ]
   },
   {
    "attachments": {},
@@ -63,10 +119,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-15\n",
+      "-14\n",
+      "-13\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in h [:3]:\n",
+    "    print(i)"
+   ]
   },
   {
    "attachments": {},
@@ -78,10 +147,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 -15\n",
+      "1 -14\n",
+      "2 -13\n",
+      "3 -12\n",
+      "4 -11\n",
+      "5 -10\n",
+      "6 -9\n",
+      "7 -8\n",
+      "8 -7\n",
+      "9 -6\n",
+      "10 -5\n",
+      "11 -4\n",
+      "12 -3\n",
+      "13 -2\n",
+      "14 -1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x, y in enumerate(h):\n",
+    "    print(x, y)"
+   ]
   },
   {
    "attachments": {},
@@ -93,10 +187,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "h=[1,2,3,5,7,8,10,13,14,15,17,20]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=1\n",
+    "while n <= 20:\n",
+    "    if not (n in h):\n",
+    "        h.insert(n-1,n)\n",
+    "    n+=1\n",
+    "print(h)\n"
+   ]
   },
   {
    "attachments": {},
@@ -112,10 +230,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610, 987, 1597, 2584, 4181, 6765, 10946, 17711, 28657, 46368, 75025, 121393, 196418, 317811, 514229, 832040, 1346269]\n"
+     ]
+    }
+   ],
+   "source": [
+    "h=[1,2]\n",
+    "n=2\n",
+    "while n<30:\n",
+    "    h.append(h[n-1] + h[n-2])\n",
+    "    n+=1\n",
+    "print(h)"
+   ]
   },
   {
    "attachments": {},
@@ -127,10 +260,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3524576"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(h)"
+   ]
   },
   {
    "attachments": {},
@@ -149,10 +295,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.6179775280898876\n",
+      "1.6180555555555556\n",
+      "1.6180257510729614\n",
+      "1.6180371352785146\n",
+      "1.618032786885246\n"
+     ]
+    }
+   ],
+   "source": [
+    "#aqui no entendi nada de lo que habia que hacer asi que tuve que mmirar todo el ejemplo de la actividad respondida\n",
+    "primeros = 15  \n",
+    "n = primeros - 5  \n",
+    "\n",
+    "while n < primeros:  \n",
+    "    print(h[n] / h[n - 1])  \n",
+    "    n += 1"
+   ]
   },
   {
    "attachments": {},
@@ -165,10 +331,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "22\n",
+      "40\n",
+      "61\n",
+      "68\n"
+     ]
+    }
+   ],
+   "source": [
+    "z='hola, mundo. esto es una practica del lenguaje de programacion python'\n",
+    "for e, d in enumerate(z):\n",
+    "    if d=='n':\n",
+    "        print(e)"
+   ]
   },
   {
    "attachments": {},
@@ -180,10 +363,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "utiles escolares\n",
+      "electrodomesticos\n",
+      "transporte\n",
+      "alimentos\n"
+     ]
+    }
+   ],
+   "source": [
+    "h=dict\n",
+    "h={'utiles escolares':['lapiz','borrador','regla'],\n",
+    "   'electrodomesticos':['estufa','nevera','televisor'],\n",
+    "   'transporte':['carro','moto','avion'],\n",
+    "   'alimentos':['banana','carne','sandia']}\n",
+    "for b in h:\n",
+    "    print(b)"
+   ]
   },
   {
    "attachments": {},
@@ -195,10 +397,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['h', 'o', 'l', 'a', ',', ' ', 'm', 'u', 'n', 'd', 'o', '.', ' ', 'e', 's', 't', 'o', ' ', 'e', 's', ' ', 'u', 'n', 'a', ' ', 'p', 'r', 'a', 'c', 't', 'i', 'c', 'a', ' ', 'd', 'e', 'l', ' ', 'l', 'e', 'n', 'g', 'u', 'a', 'j', 'e', ' ', 'd', 'e', ' ', 'p', 'r', 'o', 'g', 'r', 'a', 'm', 'a', 'c', 'i', 'o', 'n', ' ', 'p', 'y', 't', 'h', 'o', 'n']\n"
+     ]
+    }
+   ],
+   "source": [
+    "q=list(z)\n",
+    "print(q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h\n",
+      "o\n",
+      "l\n",
+      "a\n",
+      ",\n",
+      " \n",
+      "m\n",
+      "u\n",
+      "n\n",
+      "d\n",
+      "o\n",
+      ".\n",
+      " \n",
+      "e\n",
+      "s\n",
+      "t\n",
+      "o\n",
+      " \n",
+      "e\n",
+      "s\n",
+      " \n",
+      "u\n",
+      "n\n",
+      "a\n",
+      " \n",
+      "p\n",
+      "r\n",
+      "a\n",
+      "c\n",
+      "t\n",
+      "i\n",
+      "c\n",
+      "a\n",
+      " \n",
+      "d\n",
+      "e\n",
+      "l\n",
+      " \n",
+      "l\n",
+      "e\n",
+      "n\n",
+      "g\n",
+      "u\n",
+      "a\n",
+      "j\n",
+      "e\n",
+      " \n",
+      "d\n",
+      "e\n",
+      " \n",
+      "p\n",
+      "r\n",
+      "o\n",
+      "g\n",
+      "r\n",
+      "a\n",
+      "m\n",
+      "a\n",
+      "c\n",
+      "i\n",
+      "o\n",
+      "n\n",
+      " \n",
+      "p\n",
+      "y\n",
+      "t\n",
+      "h\n",
+      "o\n",
+      "n\n"
+     ]
+    }
+   ],
+   "source": [
+    "m=iter(q)\n",
+    "h=len(q)\n",
+    "for i in range(h):\n",
+    "    print(next(m))"
+   ]
   },
   {
    "attachments": {},
@@ -210,10 +511,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Dios', 'primero'), ('familia', 'segundo'), ('yo', 'tercero'), ('amigos', 'cuarto'), ('economia', 'quinto'), ('trabajo', 'sexto'), ('ocio', 'septimo')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=('Dios','familia','yo','amigos','economia','trabajo','ocio')\n",
+    "b=('primero','segundo','tercero','cuarto','quinto','sexto','septimo')\n",
+    "c=zip(a, b)\n",
+    "print(list(c))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<zip object at 0x0000025458BB9A80>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(c)"
+   ]
   },
   {
    "attachments": {},
@@ -226,10 +557,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[21, 35, 42, 56, 63, 84, 91]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [18,21,29,32,35,42,56,60,63,71,84,90,91,100]\n",
+    "b=[c for c in a if c % 7==0]\n",
+    "print(b)"
+   ]
   },
   {
    "attachments": {},
@@ -242,10 +585,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "la cantidad total de elmentos es 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [[1,2,3,4],'rojo','verde',[True,False,False],['uno','dos','tres']]\n",
+    "\n",
+    "n=0\n",
+    "for i in a:\n",
+    "    if type (i)==list:\n",
+    "        n+= len(i)\n",
+    "    else:\n",
+    "        n+=1\n",
+    "print('la cantidad total de elmentos es',n)"
+   ]
   },
   {
    "attachments": {},
@@ -257,10 +618,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 3, 4], ['rojo'], ['verde'], [True, False, False], ['uno', 'dos', 'tres']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k, b in enumerate(a):\n",
+    "    if type(b)!= list:\n",
+    "        a[k]=[b]\n",
+    "print(a)"
+   ]
   }
  ],
  "metadata": {
@@ -282,7 +656,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
